--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,6 +22,8 @@
 		"start": "node ./src/index.js"
 	},
 	"dependencies": {
+		"@fastify/cors": "11.0.1",
+		"@fastify/helmet": "13.0.1",
 		"@fastify/static": "8.2.0",
 		"@fastify/swagger": "9.5.1",
 		"@fastify/swagger-ui": "5.2.3",
