--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,5 +72,8 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Build Shared
+        run: npm run build:shared
+
       - name: Test Code
         run: npm run test
