--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,9 @@ jobs:
     name: Test Code
     runs-on: ubuntu-24.04
 
+    env:
+      NODE_ENV: test
+
     steps:
       - name: Checkout Source Code
         uses: actions/checkout@v4
@@ -68,6 +71,10 @@ jobs:
         with:
           node-version-file: .nvmrc
           cache: "npm"
+
+      - name: Set Up ENV
+        run: |
+          echo "NODE_ENV=$NODE_ENV" > .env
 
       - name: Install Dependencies
         run: npm ci
