--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,33 @@ jobs:
 
       - name: Build Code
         run: npm run build
+
+  test:
+    name: Test Code
+    runs-on: ubuntu-24.04
+
+    env:
+      NODE_ENV: test
+
+    steps:
+      - name: Checkout Source Code
+        uses: actions/checkout@v4
+
+      - name: Install NodeJS
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
+          cache: "npm"
+
+      - name: Set Up ENV
+        run: |
+          echo "NODE_ENV=$NODE_ENV" > .env
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build Shared
+        run: npm run build:shared
+
+      - name: Test Code
+        run: npm run test
