--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,6 +31,7 @@
 		"convict": "6.2.4",
 		"dotenv": "17.2.0",
 		"fastify": "5.4.0",
+		"jose": "6.0.12",
 		"knex": "3.1.0",
 		"objection": "3.1.5",
 		"pg": "8.16.3",
