feat(backend): add JWT_SECRET environmental variable ss-18

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -6,6 +6,11 @@ PORT=3001
 HOST=localhost
 
 #
+# AUTH
+#
+JWT_SECRET=K5rfMuQYIFxpTsaRWMfci9KcIzAHOG4l
+
+#
 # DATABASE
 #
 DB_CONNECTION_STRING=[db_client]://[db_username]:[db_user_password]@localhost:[db_port]/[db_name]
