--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "smartscapes",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"type": "module",
 	"workspaces": [
 		"apps/backend",
@@ -19,6 +19,8 @@
 		"lint:js": "npx  eslint . --max-warnings=0 --no-warn-ignored",
 		"lint:format": "npx prettier \"**/*.{js,ts,tsx,json,md,css,html}\" --check",
 		"lint:unused": "knip",
+		"test": "npm run test --workspaces --if-present",
+		"test:coverage": "npm run test:coverage --workspaces --if-present",
 		"format": "npx prettier \"**/*.{js,ts,tsx,json,md,css,html}\" --write",
 		"build": "npm run build:shared && npm run build:backend && npm run build:frontend && npm run build:prepare",
 		"build:shared": "npm run build -w packages/shared",
