--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,7 +25,8 @@
 		"react-dom": "19.1.0",
 		"react-hook-form": "7.60.0",
 		"react-redux": "9.2.0",
-		"react-router": "7.7.0"
+		"react-router": "7.7.0",
+		"react-toastify": "11.0.5"
 	},
 	"devDependencies": {
 		"@types/eslint-plugin-jsx-a11y": "6.10.0",
