--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -6,6 +6,13 @@ PORT=3001
 HOST=localhost
 
 #
+# AUTH
+#
+JWT_SECRET=K5rfMuQYIFxpTsaRWMfci9KcIzAHOG4l
+JWS_ALGORITHM=HS256
+TOKEN_EXPIRATION=24h
+
+#
 # DATABASE
 #
 DB_CONNECTION_STRING=[db_client]://[db_username]:[db_user_password]@localhost:[db_port]/[db_name]
