--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -6,6 +6,7 @@
 		"lib": ["DOM", "DOM.Iterable", "ESNext"],
 		"jsx": "react-jsx",
 		"baseUrl": ".",
+		"types": ["vite-plugin-pwa/client"],
 		"paths": {
 			"~/*": ["./src/*"]
 		}
