--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,10 +1,6 @@
 {
 	"extends": "../../tsconfig.json",
-	"include": [
-		"**/*.ts",
-		"**/*.js",
-		"../../apps/frontend/src/pages/auth/libs/types/user-sign-up-form-values.ts"
-	],
+	"include": ["**/*.ts", "**/*.js"],
 	"exclude": ["node_modules", "build"],
 	"compilerOptions": {
 		"baseUrl": "."
