feat(release): update cd workflow ss-10

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,31 +37,17 @@ jobs:
           manifest-file: .release-please-manifest.json
           config-file: release-please-config.json
 
-  # TODO: Uncomment and update when ready to deploy
-  # deploy:
-  #   name: Deploy
-  #   needs: release
-  #   if: ${{ needs.release.outputs.release_created }}
-  #   runs-on: ubuntu-24.04
-  #   environment:
-  #     name: development
-  #     url: http://smartscapes-development.eu-central-1.elasticbeanstalk.com/
+      - name: Prepare deployment pkg
+        run: |
+          zip -r build.zip . -x .github
 
-  #   steps:
-  #     - name: Checkout Source Code
-  #       uses: actions/checkout@v4
-
-  #     - name: Prepare deployment package
-  #       run: |
-  #         zip -r build.zip . -x .github
-
-  #     - name: Deploy to Beanstalk
-  #       uses: einaregilsson/beanstalk-deploy@v22
-  #       with:
-  #         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         region: ${{ secrets.AWS_REGION }}
-  #         application_name: ${{ secrets.EBS_APPLICATION_NAME }}
-  #         environment_name: ${{ env.EBS_ENVIRONMENT_NAME }}
-  #         version_label: ${{ github.sha }}
-  #         deployment_package: ./build.zip
+      - name: Deploy to EBS
+        uses: einaregilsson/beanstalk-deploy@v22
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          region: ${{ secrets.AWS_REGION }}
+          application_name: ${{ secrets.EBS_APPLICATION_NAME }}
+          environment_name: ${{ env.EBS_ENVIRONMENT_NAME }}
+          version_label: ${{ github.sha }}
+          deployment_package: ./build.zip
