--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,6 +21,7 @@
 		"@reduxjs/toolkit": "2.8.2",
 		"@smartscapes/shared": "*",
 		"clsx": "2.1.1",
+		"mapbox-gl": "3.14.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-hook-form": "7.60.0",
