--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,8 @@
 		"migrate:dev:make": "tsx ../../node_modules/knex/bin/cli.js migrate:make -x ts",
 		"migrate:dev:down": "tsx ../../node_modules/knex/bin/cli.js migrate:down",
 		"migrate:dev:rollback": "tsx ../../node_modules/knex/bin/cli.js migrate:rollback --all",
+		"seed:dev": "tsx ../../node_modules/knex/bin/cli.js seed:run",
+		"seed:dev:make": "tsx ../../node_modules/knex/bin/cli.js seed:make -x ts",
 		"build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json && npm run build:copy",
 		"build:copy": "cp -r package.json build",
 		"prestart": "npm run migrate",
