--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -26,6 +26,7 @@
 		"react-hook-form": "7.60.0",
 		"react-redux": "9.2.0",
 		"react-router": "7.7.0",
+		"react-select": "5.10.2",
 		"react-toastify": "11.0.5"
 	},
 	"devDependencies": {
