--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"git:hooks:precommit": "lint-staged --cwd .",
 		"git:hooks:commit": "npx @commitlint/cli --edit",
 		"prestart": "npm install --include=dev && npm run build",
-		"start": "cd apps/build/backend && npm run start"
+		"start": "cd apps/build/backend && npm run start",
+		"api:tests": "npx playwright test"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "19.8.1",
@@ -39,6 +40,7 @@
 		"@commitlint/types": "19.8.1",
 		"@eslint/js": "9.31.0",
 		"@ls-lint/ls-lint": "2.3.1",
+		"@playwright/test": "1.54.2",
 		"@stylistic/eslint-plugin": "5.1.0",
 		"@typescript-eslint/eslint-plugin": "8.37.0",
 		"@typescript-eslint/parser": "8.37.0",
@@ -67,5 +69,8 @@
 	"simple-git-hooks": {
 		"pre-commit": "npm run lint:types && npm run git:hooks:precommit",
 		"commit-msg": "npm run git:hooks:commit"
+	},
+	"dependencies": {
+		"@faker-js/faker": "9.9.0"
 	}
 }
