--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,6 +15,8 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
+      - name: Build shared package
+        run: npm run build:shared
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
