--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -41,7 +41,9 @@
 		"pg": "8.16.3",
 		"pino": "9.7.0",
 		"pino-pretty": "13.0.0",
-		"swagger-jsdoc": "6.2.8"
+		"swagger-jsdoc": "6.2.8",
+		"@aws-sdk/client-s3": "^3.0.0",
+		"@aws-sdk/s3-request-presigner": "^3.0.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "6.0.0",
