--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -43,7 +43,7 @@
 		"pino-pretty": "13.0.0",
 		"swagger-jsdoc": "6.2.8",
 		"@aws-sdk/client-s3": "^3.0.0",
-		"@aws-sdk/s3-request-presigner": "^3.0.0"
+		"@aws-sdk/s3-presigned-post": "3.863.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "6.0.0",
