--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -29,4 +29,4 @@ SALT_ROUNDS=10
 # MAPBOX DIRECTIONS API
 #
 MAPBOX_ACCESS_TOKEN=WHATEVERTOKEN
-MAPBOX_URL=https://api.mapbox.com
+MAPBOX_BASE_URL=https://api.mapbox.com
