--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,10 @@ jobs:
       NODE_ENV: test
 
     steps:
+      - name: Set Up ENV
+        run: |
+          echo "NODE_ENV=$NODE_ENV" >> .env
+
       - name: Checkout Source Code
         uses: actions/checkout@v4
 
@@ -71,10 +75,6 @@ jobs:
         with:
           node-version-file: .nvmrc
           cache: "npm"
-
-      - name: Set Up ENV
-        run: |
-          echo "NODE_ENV=$NODE_ENV" > .env
 
       - name: Install Dependencies
         run: npm ci
