--- a/.github/workflows/ct.yml
+++ b/.github/workflows/ct.yml
@@ -1,10 +1,9 @@
-name: Continuous Testing
+name: Integration Tests
 
 on:
   push:
     branches:
       - main
-
   workflow_dispatch:
 
 concurrency:
@@ -12,14 +11,19 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test:
-    name: Test Code
+  test-api-integration:
+    name: Test API Integration
     runs-on: ubuntu-24.04
     timeout-minutes: 45
     env:
       NODE_ENV: test
 
     steps:
+      - name: Set Up ENV
+        run: |
+          echo "NODE_ENV=$NODE_ENV" >> .env
+          echo "API_BASE_URL=${{ secrets.API_BASE_URL }}" >> .env
+
       - name: Checkout Source Code
         uses: actions/checkout@v4
 
@@ -50,13 +54,13 @@ jobs:
       - name: Build Shared Package
         run: npm run build:shared
 
-      - name: Test Code
-        run: npm run test:e2e
+      - name: Run Tests
+        run: npm run test:integration
 
-      - name: Upload Playwright Report
+      - name: Upload Test Report
         uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-report
+          name: api-test-report
           path: test-report/
           retention-days: 30
