--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -2,5 +2,6 @@
 	".": "1.10.0",
 	"apps/backend": "1.7.0",
 	"apps/frontend": "1.9.3",
-	"packages/shared": "1.8.0"
+	"packages/shared": "1.8.0",
+	"tests": "0.0.1"
 }
