--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"workspaces": [
 		"apps/backend",
 		"apps/frontend",
-		"packages/shared"
+		"packages/shared",
+		"tests"
 	],
 	"engines": {
 		"node": ">=22.10.0 <23.0.0",
@@ -19,7 +20,7 @@
 		"lint:js": "npx  eslint . --max-warnings=0 --no-warn-ignored",
 		"lint:format": "npx prettier \"**/*.{js,ts,tsx,json,md,css,html}\" --check",
 		"lint:unused": "knip",
-		"test:e2e": "npx playwright test",
+		"test:integration": "npm run test:integration -w tests",
 		"test:unit": "npm run test --workspaces --if-present",
 		"test:unit:coverage": "npm run test:coverage --workspaces --if-present",
 		"format": "npx prettier \"**/*.{js,ts,tsx,json,md,css,html}\" --write",
@@ -40,7 +41,6 @@
 		"@commitlint/types": "19.8.1",
 		"@eslint/js": "9.31.0",
 		"@ls-lint/ls-lint": "2.3.1",
-		"@playwright/test": "1.54.2",
 		"@stylistic/eslint-plugin": "5.1.0",
 		"@typescript-eslint/eslint-plugin": "8.37.0",
 		"@typescript-eslint/parser": "8.37.0",
@@ -69,8 +69,5 @@
 	"simple-git-hooks": {
 		"pre-commit": "npm run lint:types && npm run git:hooks:precommit",
 		"commit-msg": "npm run git:hooks:commit"
-	},
-	"dependencies": {
-		"@faker-js/faker": "9.9.0"
 	}
 }
