--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "apps/backend/**"
+      - "packages/shared/**"
+
   workflow_dispatch:
 
 concurrency:
