ci(root): add development url to the cd action ss-291

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,6 +16,10 @@ concurrency:
 
 jobs:
   release:
+    environment:
+      name: development
+      url: ${{ secrets.DEVELOPMENT_APP_URL }}
+
     permissions:
       contents: write
       pull-requests: write
