--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,8 +24,10 @@
 		"start": "node ./src/index.js"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.0.0",
 		"@fastify/cors": "11.0.1",
 		"@fastify/helmet": "13.0.1",
+		"@fastify/multipart": "9.0.3",
 		"@fastify/static": "8.2.0",
 		"@fastify/swagger": "9.5.1",
 		"@fastify/swagger-ui": "5.2.3",
@@ -41,9 +43,7 @@
 		"pg": "8.16.3",
 		"pino": "9.7.0",
 		"pino-pretty": "13.0.0",
-		"swagger-jsdoc": "6.2.8",
-		"@aws-sdk/client-s3": "^3.0.0",
-		"@aws-sdk/s3-presigned-post": "3.863.0"
+		"swagger-jsdoc": "6.2.8"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "6.0.0",
