--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,6 +20,7 @@
 		"@hookform/resolvers": "5.1.1",
 		"@reduxjs/toolkit": "2.8.2",
 		"@smartscapes/shared": "*",
+		"@tanstack/react-table": "8.21.3",
 		"clsx": "2.1.1",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
