fix(root): use direct environment url instead of secrets in cd workflow ss-291

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@ jobs:
   release:
     environment:
       name: development
-      url: ${{ secrets.DEVELOPMENT_APP_URL }}
+      url: https://smart-scapes.com/
 
     permissions:
       contents: write
