--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -2,6 +2,7 @@
 	"extends": "../../tsconfig.json",
 	"include": ["**/*.ts", "**/*.js", "**/*.tsx", "vite.config.ts"],
 	"exclude": ["node_modules", "build"],
+	"files": ["packages.d.ts", "../../packages.d.ts"],
 	"compilerOptions": {
 		"lib": ["DOM", "DOM.Iterable", "ESNext"],
 		"jsx": "react-jsx",
