feat(backend/shared): mapbox api integration ss-193 (#223)
* feat(backend): implement map-box api ss-193

* feat(backend/shared): implement construct route request validation ss-193

* feat(backend): add swagger docs ss-193

* feat(backend): add testing cases ss-193

* feat(backend/shared): implement request debouncing hook ss-194

* refactor(backend): map prehandlers data & solve naming issues  ss-184

* refactor(backend): update swagger docs  ss-184

* refactor(backend/shared): update files names ss-184

* refactor(backend): change import location ss-184

* refactor(backend): rollback construct reqests naming ss-184

* refactor(backend): change interfaces naming  ss-193

* refactor(shared): move route validation config to enums  ss-193

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -24,3 +24,9 @@ DB_POOL_MAX=10
 # ENCRYPTION
 #
 SALT_ROUNDS=10
+
+#
+# MAPBOX DIRECTIONS API
+#
+MAPBOX_ACCESS_TOKEN=WHATEVERTOKEN
+MAPBOX_BASE_URL=https://api.mapbox.com
