--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
 	"simple-git-hooks": {
 		"pre-commit": "npm run lint:types && npm run git:hooks:precommit",
 		"commit-msg": "npm run git:hooks:commit"
+	},
+	"dependencies": {
+		"path-to-regexp": "8.2.0"
 	}
 }
