test(backend): remove unused constants ss-236

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,34 +6,13 @@
 			"include-component-in-tag": false
 		},
 		"apps/backend": {
-			"release-type": "node",
-			"extra-files": [
-				{
-					"type": "json",
-					"path": "package-lock.json",
-					"jsonpath": "$.packages['apps/backend'].version"
-				}
-			]
+			"release-type": "node"
 		},
 		"apps/frontend": {
-			"release-type": "node",
-			"extra-files": [
-				{
-					"type": "json",
-					"path": "package-lock.json",
-					"jsonpath": "$.packages['apps/frontend'].version"
-				}
-			]
+			"release-type": "node"
 		},
 		"packages/shared": {
-			"release-type": "node",
-			"extra-files": [
-				{
-					"type": "json",
-					"path": "package-lock.json",
-					"jsonpath": "$.packages['packages/shared'].version"
-				}
-			]
+			"release-type": "node"
 		},
 		"@smartscapes/tests": {
 			"release-type": "node"
