--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -2,5 +2,6 @@
 	".": "1.26.2",
 	"apps/backend": "1.17.2",
 	"apps/frontend": "1.20.2",
-	"packages/shared": "1.16.0"
+	"packages/shared": "1.16.0",
+	"@smartscapes/tests": "0.0.1"
 }
