--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,12 +1,11 @@
 name: Integration Tests
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - "apps/backend/**"
-      - "packages/shared/**"
+  workflow_run:
+    workflows:
+      - "Continuous Delivery"
+    types:
+      - completed
 
   workflow_dispatch:
 
@@ -25,8 +24,8 @@ jobs:
     steps:
       - name: Set Up ENV
         run: |
-          echo "NODE_ENV=$NODE_ENV" >> .env
-          echo "API_BASE_URL=${{ secrets.DEVELOPMENT_API_BASE_URL }}" >> .env
+          echo "NODE_ENV=$NODE_ENV" >> tests/.env
+          echo "API_BASE_URL=${{ secrets.DEVELOPMENT_API_BASE_URL }}" >> tests/.env
 
       - name: Checkout Source Code
         uses: actions/checkout@v4
