--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -66,3 +66,10 @@ jobs:
           environment_name: ${{ env.EBS_ENVIRONMENT_NAME }}
           version_label: ${{ github.sha }}
           deployment_package: ./build.zip
+
+  run-integration-tests:
+    needs: release
+
+    uses: ./.github/workflows/integration-tests.yml
+
+    name: Run Integration Tests
