--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,11 +1,7 @@
 name: Integration Tests
 
 on:
-  workflow_run:
-    workflows:
-      - "Continuous Delivery"
-    types:
-      - completed
+  workflow_call:
 
   workflow_dispatch:
 
