fix(root): fix integration tests workflow ss-291 (#354)
* fix(root): fix integration tests workflow ss-291

* fix(root): fix integration tests workflow ss-291

* fix(root): fix integration tests workflow ss-291

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -68,7 +68,7 @@ jobs:
           deployment_package: ./build.zip
 
   run-integration-tests:
-    needs: release
+    needs: deploy
 
     uses: ./.github/workflows/integration-tests.yml
 
