--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Set Up ENV
         run: |
-          echo "NODE_ENV=$NODE_ENV" >> .env
-          echo "API_BASE_URL=${{ secrets.DEVELOPMENT_API_BASE_URL }}" >> .env
+          echo "NODE_ENV=$NODE_ENV" >> tests/.env
+          echo "API_BASE_URL=${{ secrets.DEVELOPMENT_API_BASE_URL }}" >> tests/.env
 
       - name: Install NodeJS
         uses: actions/setup-node@v4
