--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -38,6 +38,7 @@
 		"jose": "6.0.12",
 		"knex": "3.1.0",
 		"objection": "3.1.5",
+		"path-to-regexp": "8.2.0",
 		"pg": "8.16.3",
 		"pino": "9.7.0",
 		"pino-pretty": "13.0.0",
