--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,8 +24,10 @@
 		"start": "node ./src/index.js"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.0.0",
 		"@fastify/cors": "11.0.1",
 		"@fastify/helmet": "13.0.1",
+		"@fastify/multipart": "9.0.3",
 		"@fastify/static": "8.2.0",
 		"@fastify/swagger": "9.5.1",
 		"@fastify/swagger-ui": "5.2.3",
