fix(root): inherit secrects on workflow run for tests ss-295

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -71,5 +71,6 @@ jobs:
     needs: deploy
 
     uses: ./.github/workflows/integration-tests.yml
+    secrets: inherit
 
     name: Run Integration Tests
