--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,7 +20,9 @@
 		"@hookform/resolvers": "5.1.1",
 		"@reduxjs/toolkit": "2.8.2",
 		"@smartscapes/shared": "1.25.0",
+		"@tanstack/react-table": "8.21.3",
 		"clsx": "2.1.1",
+		"date-fns-tz": "3.2.0",
 		"mapbox-gl": "3.14.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
