feat(frontend): install debounce, redo useDebounce and its usage ss-340

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,7 @@
 		"@tanstack/react-table": "8.21.3",
 		"clsx": "2.1.1",
 		"date-fns-tz": "3.2.0",
+		"debounce": "2.2.0",
 		"mapbox-gl": "3.14.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
