--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,6 +22,7 @@
 		"@smartscapes/shared": "1.34.0",
 		"@tanstack/react-table": "8.21.3",
 		"clsx": "2.1.1",
+		"date-fns": "4.1.0",
 		"date-fns-tz": "3.2.0",
 		"debounce": "2.2.0",
 		"mapbox-gl": "3.14.0",
